# alphaflow

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  justfile  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
alphaflow/: __init__.py  constants.py  enums.py
alphaflow/analyzers/: __init__.py  default_analyzer.py
alphaflow/brokers/: __init__.py  simple_broker.py
alphaflow/data_feeds/: __init__.py  alpha_vantage_data_feed.py  csv_data_feed.py  fmp_data_feed.py  polygon_data_feed.py
alphaflow/database/: QUICKSTART.md  README.md  __init__.py  base.py  models.py  session.py
alphaflow/event_bus/: event_bus.py  event_queue.py  subscriber.py
alphaflow/events/: __init__.py  event.py  fill_event.py  market_data_event.py  order_event.py
alphaflow/examples/: README.md  database_example.py  polygon_example.py  sample_strategies.py
alphaflow/strategies/: __init__.py  buy_and_hold_strategy.py
alphaflow/tests/: conftest.py  test_alpha_flow.py  test_alphaflow.py  test_analyzer.py  test_csv_data_feed.py  test_database.py  test_event_bus.py  test_event_queue.py  test_polygon_data_feed.py  test_portfolio.py
alphaflow/tests/factories/: __init__.py
alphaflow/tests/fixtures/: __init__.py
docs/: contributing.md  getting_started.md  index.md  installation.md  roadmap.md
docs/api/: analyzers.md  brokers.md  core.md  data_feeds.md  events.md  strategies.md
